--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
+  max-width: 100vw;
   overflow-x: hidden;
   background-color: #000;
 }
@@ -27,6 +28,8 @@ body {
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .layout-wrapper {
